fixed bug causing sidebar to crunch on iOS

--- a/src/stylus/components/_sidebar.styl
+++ b/src/stylus/components/_sidebar.styl
@@ -1,8 +1,5 @@
 .sidebar
   background-color: $theme.secondary
-  display: flex
-  flex-basis: $sidebar-width
-  flex-direction: column
   overflow-y: auto
   transition: transform .3s cubic-bezier(0,0,.2,1)
   width: $sidebar-width
